Add clear function and modify button eventListener
Clear button now resets the display to 0 and deletes the textContent.
All number/operator buttons now add their textContent to the display and
removes the 0 from the display.

--- a/styles.css
+++ b/styles.css
@@ -32,6 +32,12 @@ body {
     font-size:xx-large;
     color:white;
     padding:10px;
+    min-height:57px;
+    box-sizing:border-box;
+}
+
+p {
+    margin:0;
 }
 
 #displayOutput,
